plugins {
    alias(libs.plugins.android.application) apply true
    id 'com.google.gms.google-services' apply true
    alias(libs.plugins.androidx.navigation.safe.args) apply true
    alias(libs.plugins.secrets.gradle.plugin) apply true
}
//me costo un huevo aplicar este plugin
apply plugin: 'realm-android'

android {
    namespace 'com.example.agrosmart'
    compileSdk 35

    defaultConfig {
        applicationId "com.example.agrosmart"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding true
        mlModelBinding true
        buildConfig true
    }
}

dependencies {
    implementation libs.camera.core
    implementation libs.camera.camera2
    implementation libs.camera.lifecycle
    implementation libs.camera.video

    implementation libs.camera.view
    implementation libs.camera.extensions

    implementation(libs.guava)

    implementation libs.firebase.firestore
    implementation platform(libs.firebase.bom)
    implementation libs.firebase.auth
    implementation libs.play.services.auth
    implementation(libs.credentials.play.services.auth)
    implementation libs.facebook.android.sdk
    implementation(libs.credentials)
    implementation(libs.googleid)
    implementation libs.appcompat
    implementation libs.lifecycle.common
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.glide
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    implementation 'com.google.android.gms:play-services-base:18.3.0'
    implementation 'com.google.android.gms:play-services-tasks:18.0.2'


    implementation libs.litert.support
    implementation libs.litert.metadata

    implementation libs.litert.gpu

    implementation libs.retrofit
    implementation libs.converter.gson

    testImplementation libs.junit
    testImplementation 'org.mockito:mockito-core:5.11.0'
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    //database

    implementation libs.realm.android.library

    compileOnly libs.lombok
    annotationProcessor libs.lombok
}